Commit #3: Add Dashboard.html code

--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -50,6 +50,9 @@
                 <li class="active">
                     <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
                 </li>
+                <li class="active">
+                    <a href="/dashboard"><span class="glyphicon glyphicon-home"></span> Dashboard</a>
+                </li>
             </ul>
         </div>
     </nav>
