Commit #10: Add wake-up image to static folder and reference it from tile-icon class

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -37,6 +37,10 @@
         float: left;
     }
 
+    .tile-icon {
+	    background-image: url('/static/png/wake-up.png');
+    }
+
     img.wakeup-image {
         width: 66px;
         height: 70px;
