Commit #15: Fix CSS for Dashboard Buttons

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -99,7 +99,6 @@
     }
 
     .dashboard-nav-button {
-        width: 60px;
         float: left;
         margin-right: 18px;
         margin-left: 6px;
@@ -107,6 +106,14 @@
 
     .dashboard-nav-button-text {
         border: 1px solid rebeccapurple;
+    }
+
+    #nav-tiles {
+        width: 60px;
+    }
+
+    #nav-location {
+        width: 90px;
     }
 
     #nav-tiles h5 {
