Commit #16: Add Timeline Dashboard Nav Button

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -100,28 +100,24 @@
 
     .dashboard-nav-button {
         float: left;
-        margin-right: 18px;
-        margin-left: 6px;
+        margin-right: 6px;
+        margin-left: 18px;
     }
 
     .dashboard-nav-button-text {
         border: 1px solid rebeccapurple;
     }
 
-    #nav-tiles {
-        width: 60px;
-    }
-
-    #nav-location {
-        width: 90px;
-    }
-
     #nav-tiles h5 {
-        padding: 9px 10px 9px 12px;
+        padding: 9px 12px 9px 12px;
+    }
+
+    #nav-timeline h5 {
+        padding: 9px 12px 9px 12px;
     }
 
     #nav-location h5 {
-        padding: 9px 10px 9px 16px;
+        padding: 9px 16px 9px 16px;
     }
 
 </style>
@@ -131,6 +127,9 @@
     <div class="row dashboard-section">
         <div id="nav-tiles" class="dashboard-nav-button">
             <h5 class="dashboard-nav-button-text">Tiles</h5>
+        </div>
+        <div id="nav-timeline" class="dashboard-nav-button">
+            <h5 class="dashboard-nav-button-text">Timeline</h5>
         </div>
         <div id="nav-location" class="dashboard-nav-button">
             <h5 class="dashboard-nav-button-text">Location</h5>
