Commit 19: Try to fix the django parsing issue

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -180,9 +180,9 @@
 </div>
 <script id="theTmpl" type="text/x-jsrender">
     <div>
-        <em>Name:</em> {{:name}}
+        <em>Name:</em>{{/:name}}
         {{if showNickname && nickname}}
-        (Goes by <em>{{:nickname}}</em>)
+        (Goes by <em>{{/:nickname}}</em>)
         {{/if}}
     </div>
 </script>
