Commit #21: Fix the remaining {{}} tags to {}

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -181,9 +181,9 @@
 <script id="theTmpl" type="text/x-jsrender">
     <div>
         <em>Name:</em>{:name}
-        {{if showNickname && nickname}}
+        {if showNickname && nickname}
         (Goes by <em>{:nickname}</em>)
-        {{/if}}
+        {/if}
     </div>
 </script>
 <script type="text/javascript">
