Commit #27: Replace {} with {% %} to make it {{}} effectively

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -179,16 +179,16 @@
     </div>
 </div>
 <script id="canvasTileTemplate" type="text/x-jsrender">
-    <div id="{:canvasTileId}" class="tile">
+    <div id="{%:canvasTileId%}" class="tile">
         <div class="tile-icon-div">
             <img class="tile-icon">
         </div>
         <div class="tile-text-div">
             <div class="">
-                <span class="tile-text tile-text-main">{:tileMainText}</span>
+                <span class="tile-text tile-text-main">{%:tileMainText%}</span>
             </div>
             <div class="">
-                <span class="tile-text tile-text-sub">{:tileSubText}</span>
+                <span class="tile-text tile-text-sub">{%:tileSubText%}</span>
             </div>
         </div>
     </div>
