Commit #30: Fix the canvasTileData to ensure Sleep Tile gets css applied

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -213,7 +213,7 @@
               "tileSubText": "6:00 am"
           },
           {
-              "name": "sleep",
+              "canvasTileId": "sleep",
               "tileMainText": "Sleep",
               "tileSubText": "10:30 pm"
           }
