Commit #31: Add new Tile - Brush Teeth + PNG Icon

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -65,6 +65,17 @@
         background-position: 0px 5px;
     }
 
+    #brushTeeth {
+        background: #00ffde;
+    }
+
+    #brushTeeth img.tile-icon {
+        background-image: url('/static/activities/brush-teeth.png');
+        width: 66px;
+        height: 70px;
+        background-position: 0px 5px;
+    }
+
     #sleep {
         background: #939393;
     }
@@ -211,6 +222,11 @@
               "canvasTileId": "wakeup",
               "tileMainText": "Wake Up",
               "tileSubText": "6:00 am"
+          },
+          {
+              "canvasTileId": "brushTeeth",
+              "tileMainText": "Brush Teeth",
+              "tileSubText": "6:15 am"
           },
           {
               "canvasTileId": "sleep",
