--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -43,6 +43,7 @@
         height: 72px;
         width: 160px;
         top: 27px;
+        margin-bottom: 27px;
         left: 30px;
         margin-right: 30px;
         position: relative;
@@ -67,6 +68,7 @@
 
     #brushTeeth {
         background: #00ffde;
+        width: 200px !important;
     }
 
     #brushTeeth img.tile-icon {
