Commit #33: Make the left and right canvas tile margins to 27px

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -45,7 +45,8 @@
         top: 27px;
         margin-bottom: 27px;
         left: 30px;
-        margin-right: 30px;
+        margin-left: 27px;
+        margin-right: 27px;
         position: relative;
         float: left;
     }
