Commit #34: Add Meditation Tile + PNG Icon

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -79,6 +79,18 @@
         background-position: 0px 5px;
     }
 
+    #meditate {
+        background: #d81bda;
+        width: 180px !important;
+    }
+
+    #meditate img.tile-icon {
+        background-image: url('/static/activities/meditate.png');
+        width: 66px;
+        height: 70px;
+        background-position: 0px 5px;
+    }
+
     #sleep {
         background: #939393;
     }
@@ -230,6 +242,11 @@
               "canvasTileId": "brushTeeth",
               "tileMainText": "Brush Teeth",
               "tileSubText": "6:15 am"
+          },
+          {
+              "canvasTileId": "meditate",
+              "tileMainText": "Meditate",
+              "tileSubText": "6:30 am"
           },
           {
               "canvasTileId": "sleep",
