--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -171,7 +171,7 @@
             <!-- Canvas that displays the Activity Visualizer -->
             <div id="canvas-wrap">
                 <canvas></canvas>
-                <div id="wakeup" class="tile">
+                <!--<div id="wakeup" class="tile">
                     <div class="tile-icon-div">
                         <img class="tile-icon">
                     </div>
@@ -196,7 +196,7 @@
                             <span class="tile-text tile-text-sub">10:30 pm</span>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
             <div id="detailsSection">
 
