Commit #37: Add Breakfast Icon

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -91,6 +91,18 @@
         background-position: 0px 1px;
     }
 
+    #breakfast {
+        background: #ffa700;
+        width: 180px !important;
+    }
+
+    #breakfast img.tile-icon {
+        background-image: url('/static/activities/breakfast.png');
+        width: 66px;
+        height: 66px;
+        background-position: 0px 1px;
+    }
+
     #sleep {
         background: #939393;
     }
@@ -247,6 +259,11 @@
               "canvasTileId": "meditate",
               "tileMainText": "Meditate",
               "tileSubText": "6:30 am"
+          },
+          {
+              "canvasTileId": "breakfast",
+              "tileMainText": "Breakfast",
+              "tileSubText": "7:30 am"
           },
           {
               "canvasTileId": "sleep",
