Commit #38: Added Toilet Tile + Icon

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -67,6 +67,18 @@
         background-position: 0px 5px;
     }
 
+    #toilet {
+        background: #8a6d3b;
+        width: 200px !important;
+    }
+
+    #toilet img.tile-icon {
+        background-image: url('/static/activities/toilet.png');
+        width: 66px;
+        height: 70px;
+        background-position: 0px 5px;
+    }
+
     #brushTeeth {
         background: #00ffde;
         width: 200px !important;
@@ -249,6 +261,11 @@
               "canvasTileId": "wakeup",
               "tileMainText": "Wake Up",
               "tileSubText": "6:00 am"
+          },
+          {
+              "canvasTileId": "toilet",
+              "tileMainText": "Toilet",
+              "tileSubText": "6:05 am"
           },
           {
               "canvasTileId": "brushTeeth",
