Commit #39: Added Bath Tile + Icon

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -103,6 +103,18 @@
         background-position: 0px 1px;
     }
 
+    #bath {
+        background: #ffa700;
+        width: 180px !important;
+    }
+
+    #bath img.tile-icon {
+        background-image: url('/static/activities/bath.png');
+        width: 66px;
+        height: 66px;
+        background-position: 0px 1px;
+    }
+
     #breakfast {
         background: #ffa700;
         width: 180px !important;
@@ -276,6 +288,11 @@
               "canvasTileId": "meditate",
               "tileMainText": "Meditate",
               "tileSubText": "6:30 am"
+          },
+          {
+              "canvasTileId": "bath",
+              "tileMainText": "Bath",
+              "tileSubText": "6:45 am"
           },
           {
               "canvasTileId": "breakfast",
