Commit #40: Fix css styles for Icons and Tiles

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -40,7 +40,7 @@
     .tile {
         z-index: 3;
         border: 1px solid #00ff92;
-        height: 72px;
+        height: 69px;
         width: 160px;
         top: 27px;
         margin-bottom: 27px;
@@ -63,31 +63,30 @@
     #wakeup img.tile-icon {
         background-image: url('/static/activities/wake-up.png');
         width: 66px;
-        height: 70px;
-        background-position: 0px 5px;
+        height: 66px;
+        background-position: 1px 5px;
     }
 
     #toilet {
-        background: #8a6d3b;
-        width: 200px !important;
+        background: #dff0d8;
     }
 
     #toilet img.tile-icon {
         background-image: url('/static/activities/toilet.png');
         width: 66px;
-        height: 70px;
-        background-position: 0px 5px;
+        height: 66px;
+        background-position: 1px 1px;
     }
 
     #brushTeeth {
-        background: #00ffde;
+        background: #ccc;
         width: 200px !important;
     }
 
     #brushTeeth img.tile-icon {
         background-image: url('/static/activities/brush-teeth.png');
         width: 66px;
-        height: 70px;
+        height: 66px;
         background-position: 1px 1px;
     }
 
@@ -100,12 +99,11 @@
         background-image: url('/static/activities/meditate.png');
         width: 66px;
         height: 66px;
-        background-position: 0px 1px;
+        background-position: 1px 1px;
     }
 
     #bath {
-        background: #ffa700;
-        width: 180px !important;
+        background: #5abcec;
     }
 
     #bath img.tile-icon {
@@ -124,7 +122,7 @@
         background-image: url('/static/activities/breakfast.png');
         width: 66px;
         height: 66px;
-        background-position: 0px 1px;
+        background-position: 1px 1px;
     }
 
     #sleep {
@@ -134,8 +132,8 @@
     #sleep img.tile-icon {
         background-image: url('/static/activities/sleep.png');
         width: 66px;
-        height: 70px;
-        background-position: 0px 5px;
+        height: 66px;
+        background-position: 1px 12px;
     }
 
     .tile-text-div{
